--- a/styles/styles.css
+++ b/styles/styles.css
@@ -107,5 +107,10 @@ header{
     color:purple;
     background-color:#AA00FF;
     text-align: center;
-    font-size: 2em;
+    font-size: 1.3em;
+}
+
+.palabraqueera{
+    font-size: 1.4em;
+    color:rgb(80, 3, 80);
 }
