--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,7 +25,9 @@ header{
 .adivinando-container{
     display: block;
     height: 18em;
+    min-width: 240px;
     width: 80%;
+    max-width: 300px;
     padding: 10px 10px;
     margin: auto;
     background-color:#8888EE;
@@ -34,8 +36,10 @@ header{
 
 .adivinando{
     display: block;
+    padding:0;
     font-size: 2.5em;
     color : var(--azultutty);
+    min-width: 220px;
     width: 100%;
     text-align: center;
     
@@ -43,8 +47,9 @@ header{
 }
 
 .letra{
-    display: inline;
+    display: inline-block;
     color : var (--azultutty);
+    width: 20%;
 }
 
 .acierto{
