--- a/styles/styles.css
+++ b/styles/styles.css
@@ -49,25 +49,27 @@ header{
 .letra{
     display: inline-block;
     color : var (--azultutty);
-    width: 20%;
+    width: 18%;
+    margin: 0 1%;
+    border-radius:10px;
 }
 
 .acierto{
     font-size: 1em;
     color :var(--azultutty);
-    background-color:aqua;
+    background-image: linear-gradient(49deg, rgba(9,91,121,1) 0%, rgba(20,176,233,1) 29%, rgba(151,227,255,1) 53%);
 }
 
 .parcial{
     font-size: 1em;
     color:var(--azultutty);
-    background-color: var(--amarillotutty);
+    background-image: linear-gradient(49deg, rgba(255,182,0,1) 0%, rgba(255,220,0,1) 29%, rgba(242,237,0,1) 53%);
 }
 
 .letra-error{
     font-size: 1em;
     color: var(--azultuttyoscuro);
-    background-color:var(--gristutty);
+    background-image: linear-gradient(49deg, rgba(61,64,65,1) 0%, rgba(156,156,156,1) 29%, rgba(219,219,219,1) 53%);
 }
 
 .teclado-container{
